--- a/.gitignore
+++ b/.gitignore
@@ -338,6 +338,7 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
-SERVICE/BakTraCam.Service.WebApi/BakTraCam.db-wal
-SERVICE/BakTraCam.Service.WebApi/BakTraCam.db-wal
-SERVICE/BakTraCam.Service.WebApi/BakTraCam.db-wal
+# SERVICE/BakTraCam.Service.WebApi/BakTraCam.db-wal
+# SERVICE/BakTraCam.Service.WebApi/BakTraCam.db-wal
+# SERVICE/BakTraCam.Service.WebApi/BakTraCam.db-wal
+*.db-wal
