--- a/ui/BakTraCam.ClientApp/package.json
+++ b/ui/BakTraCam.ClientApp/package.json
@@ -41,9 +41,9 @@
     "classlist.js": "1.1.20150312",
     "core-js": "3.1.3",
     "express": "4.17.1",
-    "googleapis": "40.0.0",
+    "googleapis": "^72.0.0",
     "hammerjs": "2.0.8",
-    "jquery": "3.4.1",
+    "jquery": "^3.6.0",
     "moment": "2.24.0",
     "perfect-scrollbar": "1.1.0",
     "popper.js": "1.15.0",
@@ -54,7 +54,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.901.9",
-    "@angular/cli": "9.0.5",
+    "@angular/cli": "^9.1.15",
     "@angular/compiler-cli": "9.0.5",
     "@angular/language-service": "9.0.5",
     "@types/bootstrap": "4.3.0",
@@ -66,13 +66,13 @@
     "codelyzer": "5.2.1",
     "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.4.1",
+    "karma": "^6.3.2",
     "karma-chrome-launcher": "3.1.0",
     "karma-cli": "2.0.0",
     "karma-coverage-istanbul-reporter": "2.1.1",
     "karma-jasmine": "3.1.1",
     "karma-jasmine-html-reporter": "1.5.2",
-    "protractor": "5.4.3",
+    "protractor": "^5.4.4",
     "ts-node": "8.6.2",
     "tslint": "6.0.0",
     "typescript": "3.7.5"
